src/objects/SI_Trigger_Executions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to control trigger executions for each funcationality</description>
    <fields>
        <fullName>SI_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Switch to control the execution of the trigger</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Class_Name__c</fullName>
        <description>Name of the class that handles the logic for the trigger</description>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Description__c</fullName>
        <description>Description of the custom setting record</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SI_Object__c</fullName>
        <description>API name of the object that is being controller by the trigger</description>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Trigger_Events__c</fullName>
        <description>Events that trigger transaction logic for this functionality</description>
        <label>Trigger Events</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Trigger Executions</label>
</CustomObject>